samples/_failures_safe/1761425076_875ca0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53830dd9.c: In function ‘main’:
./samples/SAFE/__tmp_53830dd9.c:160:5: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  160 |     print
      |     ^~~~~
      |     printf
./samples/SAFE/__tmp_53830dd9.c:160:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_53830dd9.c:160:10: error: expected ‘;’ at end of input
  160 |     print
      |          ^
      |          ;
./samples/SAFE/__tmp_53830dd9.c:160:5: error: expected declaration or statement at end of input
  160 |     print
      |     ^~~~~
